--- a/index.html
+++ b/index.html
@@ -4,10 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Laboni's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<section class="header">
+    <div class="half-width">
+        <h1>HELLO, I'M</h1>
+        <h1> <span class="name">LABONI AYSHA</span> </h1>
+         <P>A full stack all around designer that placerat in massa consectetur.</P>
+         <a class="link-button" target="_blanck" href="https://web.facebook.com/Laboni.ayshalabu">HIRE ME</a>
+    </div>
+    <div class="half-width">
+        <img src="shapes/profile1.png" alt="">
+    </div>
+</section>
+<section>
+    <div class="half-width">
+        <img src="shapes/profile2.png" alt="">
+    </div>
+    <div class="half-width">
+        <h2>Biography</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and 
+            typesetting industry. Lorem Ipsum has been the industry's 
+            standard dummy text ever since the 1500s, when an unknown 
+            printer took a galley of type and scrambled it to make a type 
+            specimen book.</p>
+            <a class="link-button" target="_blanck" href="https://web.facebook.com/Laboni.ayshalabu">Download CV</a> 
+    </div>
+</section>
+<section class="project-area">
+    <div class="card-item">
+        <h2 class="work"> <span class="cool"> LATEST </span>WORKING PROJECT</h2>
+        <div class="card">
+            <img src="images/image 4.png" alt="">
+            <h2  class="work">Power-x-gym (gym website)</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="card">
+            <img src="images/image 5.png" alt="">
+            <h2  class="work">Creative Agency</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="card">
+            <img src="images/image 8.png" alt="">
+            <h2 class="work">Hard Rock Music</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+    </div>
+</section>
+<section class="inquiry">
+    <div class="half-width">
+        <h2 class="work-inquiry">WORK INQUIRY</h2>
+    </div>
+<div class="half-width">
+    <a class="link-button chat" target="_blanck" href="https://web.facebook.com/Laboni.ayshalabu">Let's Chat</a>
+</div>
+</section>
+<section>
+    <div class="connect">
+        <h4 class="stay">STAY CONNECTED</h4>
+        <h2 class="hello">hello@design.com</h2>
+        <img src="icons/image 6.png" alt="">
+        <img src="icons/Group 33059.png" alt="">
+        <img src="icons/image 7.png" alt="">
+    </div>
+</section>
+
 </body>
 </html>
